# project-example

./: CMakeLists.txt  README.md
cmake-example/: CMakeLists.txt
cmake-example/src/packageA/: CMakeLists.txt
cmake-example/src/packageB/: CMakeLists.txt
cmake-ros2-example/src/packageA/include/packageA/: packageA.h
cmake-ros2-example/src/packageA/src/: packageA.cpp
cmake-ros2-example/src/packageB/: CMakeLists.txt
cmake-ros2-example/src/packageB/src/: packageB.cpp
cmake-ros2-example/src/package_a/: CMakeLists.txt  package.xml
cmake-ros2-example/src/package_a/src/: package_a.cpp
cmake-ros2-example/src/package_b/: CMakeLists.txt  package.xml
cmake-ros2-example/src/package_b/src/: package_b.cpp
